fix wrap issues once and for all

--- a/public/bizzby.styl
+++ b/public/bizzby.styl
@@ -88,10 +88,12 @@ a
   fill white
   vertical-align -8px
   overflow hidden
+.bzIcon svg
+  pointer-events none
 
 .callOut
   margin 0 auto
-  margin-bottom 1rem
+  margin-bottom 0.5rem
   font-size 1rem
   text-align center
 .callOut button
@@ -201,7 +203,7 @@ bzInput-placeholder()
   font-size 0.5em
   width 100%
   text-align center
-  margin-bottom 0.5rem
+  margin 0.5rem 0 0.15rem
 .bzSwitch-item
   display inline-block
   font-size 1.2em
@@ -228,16 +230,19 @@ bzInput-placeholder()
 
 .detailView p
   display inline-block
+  max-width 100%
   overflow hidden
   padding 0.5rem 0.75rem
   margin-bottom 0.5rem
 
-.dummyElement
+.dummyContainer
   @extend .detailView p
+  max-width 100%
   position absolute
-  right -100%
-.dummyElement .bzSelector
-.dummyElement .bzInput
+  left -100%
+  top -100%
+.dummyContainer .bzSelector
+.dummyContainer .bzInput
   transition none
 
 //// Animations
